# quiz-app

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  backend_repo_summary.md  pyproject.toml  repo_summary.md  repo_summary_prompt.md  repo_to_markdown.py  scratch.md  setup_fastapi_project_conda.sh
.claude/: config.json
alembic/: env.py
alembic/versions/: 175e9007e7b3_baseline.py  717f8a38b617_added_lambda_function_to_timestamp_.py  a2597c46bb17_added_unique_constraint_to_name_field_.py  beccebd66ce8_added_user_id_field_to_revokedtokenmodel.py  cc92e98b7efa_added_token_blacklist_date_field_to_.py
backend/: README.md
backend/alembic/: env.py
backend/app/: main.py  version.py
backend/new-work-items/: generate_new_work_items_prompt.py  new-work-items-prompt-template.md  new-work-items-prompt.md  rbac_work_items.csv
backend/tests/: CLAUDE.md  conftest.py  (+2 more)
docs/: claude-code-flow-assessment.md
frontend/: package-lock.json  package.json  tailwind.config.js
prompts/: app_repo_summary.md  data.csv  frontend_prompt_template.md  group_prompt_template.md  logging_change_token_counter.py  prompt_template-layer_design.md  prompt_template.md  pytest_prompt_generator.sh  quiz-app-backend_repo_summary.md  quiz-app-backend_repo_summary_2024-03-15_23-33-13.md  quiz-app-backend_repo_summary_2024-03-18_23-57-27.md  quiz-app-backend_repo_summary_2024-03-19_00-45-50.md  quiz-app-frontend_repo_summary.md  rbac_prompt.md  repo_summary.md  repo_to_markdown.py  repo_to_markdown_backend.json  repo_to_markdown_config.json  repo_to_markdown_frontend.json  temp_logging_statements.txt  test.txt  test_creation_prompt.md  test_crud_repo_summary.md  test_expansion_prompt.md  test_failure_prompt.md  test_failure_prompt_template.md  test_models_failures.txt
quiz-app-backend/: .env  README.md  alembic.ini  code_goals.md  generate_secret.py  main.py  pyproject.toml  quiz_app.db  scratchpad.txt  test.db  test_db.db  test_main.py
quiz-app-frontend/: next.config.mjs  package-lock.json  package.json
scratch/: json-example.json
(+665 files in other folders)
