[project]
name = "quiz-app"
version = "0.1.1"
description = "A Python-based educational platform for creating, managing, and delivering interactive quizzes"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Quiz App Team"}
]
keywords = ["quiz", "education", "fastapi", "sqlalchemy", "pydantic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Education",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.1",
    "sqlalchemy>=2.0.27",
    "alembic>=1.13.1",
    "pydantic>=2.6.3",
    "pydantic-settings>=2.2.1",
    "passlib>=1.7.4",
    "bcrypt>=4.1.2",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "email-validator>=2.1.1",
    "httpx>=0.27.0",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.2",
    "pytest-asyncio>=0.23.6",
    "pytest-cov>=4.1.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "pylint>=3.2.2",
]

[tool.app]
project_name = "Quiz App Backend"
secret_key = "your_default_secret_key"
access_token_expire_minutes = 30
database_url_dev = "sqlite:///./backend/db/quiz_app.db"
database_url_test = "sqlite:///./backend/db/test.db"
unprotected_endpoints = ["/", "/login", "/register", "/docs", "/redoc", "/openapi.json"]
cors_origins = ["http://localhost", "http://localhost:8080", "http://localhost:3000"]
sentry_dsn = ""  # Add your Sentry DSN here if you're using Sentry for error tracking

[tool.pylint."MESSAGES CONTROL"]
ignored-argument-names="^current_user$"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = [
    "./backend/tests",
]
filterwarnings = [
    "ignore::DeprecationWarning"
]
